# Pawscope

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  install.ps1  install.sh  test-output.txt  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/agent-lens-claude/: Cargo.toml
crates/agent-lens-claude/src/: lib.rs
crates/agent-lens-codex/: Cargo.toml
crates/agent-lens-codex/src/: lib.rs
crates/agent-lens-copilot/: Cargo.toml
crates/agent-lens-copilot/src/: events.rs  lib.rs  lock.rs  watcher.rs
crates/agent-lens-core/: Cargo.toml
crates/agent-lens-core/src/: adapter.rs  error.rs  lib.rs  types.rs
crates/agent-lens-server/: Cargo.toml
crates/agent-lens-server/src/: api.rs  assets.rs  lib.rs  multi.rs  skills.rs
crates/pawscope-aider/: Cargo.toml
crates/pawscope-aider/src/: lib.rs
crates/pawscope-claude/: Cargo.toml
crates/pawscope-claude/src/: lib.rs
crates/pawscope-codex/: Cargo.toml
crates/pawscope-codex/src/: lib.rs
crates/pawscope-copilot/: Cargo.toml
crates/pawscope-copilot/src/: events.rs  lib.rs  watcher.rs
crates/pawscope-core/: Cargo.toml
crates/pawscope-core/src/: adapter.rs  lib.rs  pricing.rs  types.rs
crates/pawscope-gemini/: Cargo.toml
crates/pawscope-gemini/src/: lib.rs
crates/pawscope-opencode/: Cargo.toml
crates/pawscope-opencode/src/: lib.rs
crates/pawscope-server/: Cargo.toml
crates/pawscope-server/src/: api.rs  auth.rs  cache.rs  hidden.rs  labels.rs  lib.rs  multi.rs  my_skills.rs  skills.rs  store.rs  sync.rs
data/: skills-taxonomy.json
docs/launch/: v1.0-launch-posts.md
e2e/: dashboard.spec.ts  playwright.config.ts  screenshots.spec.ts  snap.spec.ts
scripts/: gen-demo-home.py  gen-skill-taxonomy.py
src/: main.rs
tests/: cross_agent_conversation.rs  token_usage.rs
tests/fixtures/copilot/4dac1bf8-ee21-4659-bc60-00aad57573fb/: events.jsonl  workspace.yaml
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  api.ts  i18n.ts  main.tsx  markdown.ts  pricing.ts  progress.ts  skillCategory.ts  styles.css  toast.ts
web/src/components/: AnalyticsPanel.tsx  Breadcrumbs.tsx  CategoryDonut.tsx  CommandPalette.tsx  CompareView.tsx  ConfigPanel.tsx  ConversationFlow.tsx  ErrorBoundary.tsx  LangToggle.tsx  LivePin.tsx  MySkillsPanel.tsx  OverviewPanel.tsx  ProgressBar.tsx  PromptsPanel.tsx  RealmPanel.tsx  SessionDetail.tsx  SessionList.tsx  SidebarResizer.tsx  Skeleton.tsx  SkillsPanel.tsx  StorePanel.tsx  ThemeToggle.tsx  ToastContainer.tsx  ToolTrend.tsx
