[package]
name = "agent-lens-codex"
version.workspace = true
edition.workspace = true

[dependencies]
agent-lens-core = { path = "../agent-lens-core" }
serde.workspace = true
serde_json.workspace = true
chrono = { version = "0.4", features = ["serde"] }
anyhow.workspace = true
tokio = { workspace = true, features = ["fs", "sync", "rt", "macros", "time"] }
tracing.workspace = true
async-trait = "0.1"
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
