[package]
name = "agent-lens-server"
version.workspace = true
edition.workspace = true

[dependencies]
agent-lens-core = { path = "../agent-lens-core" }
axum = { version = "0.8", features = ["ws"] }
tokio = { workspace = true, features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
async-trait = "0.1"
rust-embed = "8"
mime_guess = "2"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
