[package]
name = "pawscope-copilot"
version.workspace = true
edition.workspace = true

[dependencies]
pawscope-core = { path = "../pawscope-core" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
chrono = { version = "0.4", features = ["serde"] }
anyhow.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync", "rt", "macros"] }
notify = "6"
tracing.workspace = true
async-trait = "0.1"
dirs = "5"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
